<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <TextView
        android:id="@+id/et_User"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:background="#9e9e9e"
        android:text="@string/login_user"
        android:textAllCaps="true"
        android:textColor="#212221"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_User" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#9e9e9e"
        android:text="@string/login_contrasena"
        android:textAllCaps="true"
        android:textColor="#212221"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <EditText
        android:id="@+id/contra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <Button
        android:id="@+id/et_Ingreso"
        android:layout_width="318dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:background="#DCCC39"
        android:elevation="0dp"
        android:text="Ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perfil_group" />

    <Button
        android:id="@+id/et_registro"
        android:layout_width="320dp"
        android:layout_height="19dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="#DCCC39"
        android:elevation="0dp"
        android:text="Registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Ingreso" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="126dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/afro" />


    // Seleccionar el tipo de Perfil

    <TextView
        android:id="@+id/Ingre_Perfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="#9e9e9e"
        android:text="Ingreso el tipo de Perfil ( Barbero o Usuario)"
        android:textAllCaps="true"
        android:textColor="#212221"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contra" />


    <RadioGroup
        android:id="@+id/perfil_group"
        android:layout_width="394dp"
        android:layout_height="76dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ingre_Perfil">


        <RadioButton
            android:id="@+id/et_Admin"
            android:layout_width="162dp"
            android:layout_height="15dp"
            android:layout_marginStart="125dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="177dp"
            android:layout_marginRight="177dp"
            android:text="@string/A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/et_Barber"
            android:layout_width="124dp"
            android:layout_height="18dp"
            android:layout_marginStart="125dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="177dp"
            android:layout_marginRight="177dp"
            android:text="@string/B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Ingre_Perfil" />

        <RadioButton
            android:id="@+id/et_Usuario"
            android:layout_width="123dp"
            android:layout_height="17dp"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginEnd="173dp"
            android:layout_marginRight="173dp"
            android:text="@string/U"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Barber" />
    </RadioGroup>


    <com.google.android.gms.common.internal.SignInButtonImpl
        android:id="@+id/google_login_btn"
        android:layout_width="328dp"
        android:layout_height="28dp"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:background="#FFFFFF"
        android:foreground="@drawable/common_google_signin_btn_icon_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_registro">

    </com.google.android.gms.common.internal.SignInButtonImpl>

</androidx.constraintlayout.widget.ConstraintLayout>